# mcp-fns-calc

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json
src/mcp_fns_calc/: __init__.py  calculators.py  client.py  config.py  errors.py  rates.py  server.py
tests/: test_calculators.py  test_cli.py  test_client.py  test_server.py
