[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomno-mcp-fns-calc"
version = "0.1.4"
description = "MCP server: Russian tax calculators (VAT, USN, ИП contributions, progressive NDFL 2025+, patent, penalty) offline + fiscal-status checks (self-employed/НПД, ИП/ОКВЭД, disqualified, account blocks, arrears) via hosted API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "atomno-mcp", email = "hello@atomno.ru" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "tax",
  "vat",
  "usn",
  "ndfl",
  "accounting",
  "russia",
  "fintech",
  "atomno",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Russian",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Typing :: Typed",
]

dependencies = [
  "fastmcp>=2.0.0,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.1",
  "ruff>=0.5.0",
]
release = [
  "build>=1.2.0",
  "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/atomno-mcp/mcp-fns-calc"
Repository = "https://github.com/atomno-mcp/mcp-fns-calc"
Issues = "https://github.com/atomno-mcp/mcp-fns-calc/issues"
Changelog = "https://github.com/atomno-mcp/mcp-fns-calc/blob/main/CHANGELOG.md"
Documentation = "https://atomno-mcp.ru/mcp/fns-calc"

[project.scripts]
atomno-mcp-fns-calc = "mcp_fns_calc.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fns_calc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501", "B008"]
